# Path-Tracer-macOS

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp  material.cpp  material.h  objects.cpp  renderer.cpp  vector.h
